<resources>
    <string name="app_name">Roommate Chores</string>
    <string name="First_tab_title">My Chores</string>
    <string name="Second_tab_title">Schedule</string>
    <string name="Third_tab_title">Settings</string>
    <string name="top_greeting">Hello Marty</string>
    <string name="date">My Week\nSun 22 Jan - Sun 03 Feb</string>

    <string name="log_out_icon">logout</string>
    <string name="admin_tab">Admin</string>

    <!-- Group Fragment Strings  -->

    <string name="group_screen_title">Your group\'s code</string>
    <string name="group_screen_code_placeholder">12345</string>
    <string name="member_list_heading">Members</string>

    <!-- Onboarding Fragment Strings  -->
    <string name="login_screen_title">Roommate Chores</string>
    <string name="login_screen_subtitle">Make sure your roommates do their chores</string>
    <string name="login_button_title">Login</string>
    <string name="login_prompt_title">Login Now</string>
    <string name="sign_up_button_title">Sign Up</string>
    <string name="sign_up_prompt_title">Create a new account</string>
    <string name="name_field_hint">Name</string>
    <string name="email_field_hint">abc@abc.com</string>
    <string name="password_field_hint">password</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
